--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
 # This file lists all individuals having contributed content to the repository.
-Kidanemariam Fekadu Muluberhan<kide.fikadu1@gmail.com>
+Kidanemariam Fekadu Muluberhan <kide.fikadu1@gmail.com>
+Gemechisgk 
