Update to fix errors

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
-Kidanemariam Fekadu Muluberhan <kide.fikadu1@gmail.com>
-Gemechisgk 
+
+NWABUEZE FRANKLIN
+EKUAYOVWE BRIGHTON
